# Code_Genesis

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
agent/: graph.py  prompt.py  states.py  tools.py  utility.py
config/: agents.yaml  crew.yaml  tasks.yaml
core/: agent_manager.py  model_router.py  task_manager.py
generated_project/: README.md  index.html  script.js  styles.css
src/: runner.ipynb
utils/: api_checker.py
